--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,10 @@
+1.4
+-- 12 Factor App, log to console (stdout)
+-- Tidy up some pointers to use shared pointers instead
+
+1.3
+-- Add AWS default credentials provider if aws.access_key is not supplied in config
+
 1.2
 -- Memory optimisation in S3 put
 -- Decouple S3 object from any RdKafka objects
