--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,7 @@
+1.6
+-- Add ability to define loglevel
+-- Use AWS logging features to own code
+
 1.5
 -- Allow ENV var to config broker list and batchsize
 -- README.md updates for above
