--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,5 +1,6 @@
 1.12
--- So far only doc changes so no new container
+-- Add self checking of memory limits. If reach a threshold
+   shutdown the Kafka system and restart. Basically self HUP
 -- Added extra info to DEVEL.md (for my futre self's sanity)
 
 1.11
