--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,8 @@
+1.13
+-- AWS SDK C++ bump to version 1.4.75
+-- Refactor to create k3backup and k3replay as well as keeping deprecated k3
+-- Wip
+
 1.12
 -- Add self checking of memory limits. If reach a threshold
    shutdown the Kafka system and restart. Basically self HUP
