--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,8 @@
+1.13
+-- Ignore topics that start with two leading underscores and
+   not just "__consumer_*" as there are other internals Kafka
+   uses which are prefixed this way.
+
 1.12
 -- Add self checking of memory limits. If reach a threshold
    shutdown the Kafka system and restart. Basically self HUP
