--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,7 +1,7 @@
-1.14
+1.13.1
 -- AWS SDK C++ bump to version 1.4.75
 -- Refactor to create k3backup and k3replay as well as keeping deprecated k3
--- Wip
+-- k3replay refactor done, it's now ready to begin developement.
 
 1.13
 -- Ignore topics that start with two leading underscores and
